--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                 </div>
             </nav>
         </div>
-        <ul id="nav-mobile" class="sidenav" role="menu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#main">Mac</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+
+        <nav>
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#main">Mac</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
 
         <div id="home">
             <div class="section hidden-fade" id="index-banner">
