--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <li><a href="#main">Mac</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-                    <a data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons" role="button">menu</i></a>
+                    <a data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 </div>
             </nav>
         </div>
